<resources>
    <string name="app_name">Project</string>
    <string name="title1">Sign Up</string>
    <string name="title2">Sign in</string>
    <string name="btn2">Sign In</string>
    <string name="btn1">Sign Up</string>
    <string name="haveAccount">Already Have An Acoount? Sign In</string>
    <string name="AddMeal">Post New Meal</string>
    <string name="deliveryOption">Delivery Option</string>

    <string name="editMeal">Edit Meal Posting</string>
    <string name="saveChangesBtn">Save Changes</string>


    <string name="fullName">Full Name</string>
    <string name="familyName">Family Name</string>
    <string name="date">Date of Birth</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone Number</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
    <string name="national_id">National ID</string>
    <string name="dont_have_account">Don\'t have account? Sign up here!</string>
    <string name="meal_name">Meal Name</string>
    <string name="price">Price ($)</string>
    <string name="quantity_available">Quantity Available</string>
    <string name="description">Description</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="back">Back</string>
    <string name="your_cart">Your Cart</string>
    <string name="total">Total:</string>
    <string name="order_now">Order Now</string>
    <string name="your_cart_is_empty">Your Cart is Empty</string>
    <string name="search_by_username_or_meal_name">Search by username or meal name</string>
    <string name="filter">filter</string>
    <string name="go_back">Go Back</string>
    <string name="cart">Cart</string>
    <string name="qty">Qty:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="meal_details">Meal Details</string>
    <string name="order_history">Order History</string>
    <string name="no_post">You haven\'t posted any meals yet.</string>
    <string name="plus">+</string>
    <string name="sales_reports">Sales Reports</string>
    <string name="select_profile_image">Select Profile Image</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="u1">Username:</string>
    <string name="enteruname">Enter your userName please</string>
    <string name="full_name">Full Name:</string>
    <string name="email">Email:</string>
    <string name="phnb">Phone:</string>
    <string name="about">About</string>
    <string name="your_rating">Your Rating</string>
    <string name="reviews">Reviews</string>
    <string name="edit_details">Edit Details</string>
    <string name="save_details">Save Details</string>
    <string name="order_history2">Order History</string>
    <string name="sales_reports2">Sales Reports</string>
    <string name="uname">Username</string>
    <string name="full_name2">Full Name:</string>
    <string name="full_name3">Full Name</string>
    <string name="location2">Location:</string>
    <string name="location3">Location</string>
    <string name="about2">About:</string>
    <string name="about_this_user">About this user...</string>
    <string name="meals_posted_by_this_user">Meals Posted by This User</string>
    <string name="reviews2">Reviews</string>
    <string name="leave_a_review">Leave a Review:</string>
    <string name="your_comment">Your comment...</string>
    <string name="submit_review">Submit Review</string>
    <string name="price_range">Price Range</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="minus">-</string>
    <string name="tags">Tags</string>
    <string name="meal_name2">Meal Name</string>
    <string name="short_description_of_the_meal">Short description of the meal</string>
    <string name="ten">$10.00</string>
    <string name="qtyexample">Quantity: 5</string>
    <string name="delivery2">Delivery</string>
    <string name="order_id">Order ID: 123</string>
    <string name="dateex">Date: 2023-10-27</string>
    <string name="priceex">Total: $50.00</string>
    <string name="download">Download</string>
    <string name="view">View</string>
    <string name="delete">delete</string>
    <string name="edit">edit</string>
    <string name="date_2025_04_13">Date: 2025-04-13</string>
    <string name="total_sales_370_00">Total Sales: $370.00</string>
    <string name="download_pdf">Download PDF</string>
    <string name="username_">Username:</string>
    <string name="full_name_">Full name:</string>


</resources>