<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/addmealback"
    android:paddingLeft="15dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:orientation="vertical">


        <androidx.cardview.widget.CardView
            android:layout_width="378dp"
            android:layout_height="225dp"
            app:cardBackgroundColor="@color/transparentWhite"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            tools:layout_editor_absoluteX="18dp"
            tools:layout_editor_absoluteY="69dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="141dp"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/profilePictureTop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/profile" />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="245dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:text="@string/username"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/usernameTextView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/uname"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:text="@string/full_name2"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/fullNameTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/full_name3"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:text="@string/location2"
                            android:textColor="@color/black"
                            android:textSize="16sp"

                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/locationTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/location3"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="232dp"
                        android:layout_height="96dp"
                        android:layout_marginTop="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="casual"
                            android:text="@string/about2"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/aboutTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"
                            android:text="@string/about_this_user"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="268dp"
        android:layout_height="57dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textview_border"
        android:fontFamily="cursive"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/meals_posted_by_this_user"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mealsRecyclerView"
        android:layout_width="383dp"
        android:layout_height="211dp"
        android:layout_marginTop="8dp"
        tools:listitem="@layout/item_user_meal_horizontal" />

    <TextView
        android:layout_width="255dp"
        android:layout_height="38dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textview_border"
        android:fontFamily="cursive"
        android:gravity="center"

        android:text="@string/reviews2"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reviewsRecyclerView"
        android:layout_width="380dp"
        android:layout_height="196dp"
        android:layout_marginTop="8dp" />

    <TextView
        android:layout_width="248dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/textview_border"
        android:fontFamily="cursive"

        android:gravity="center"
        android:text="@string/leave_a_review"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="303dp"
            android:layout_height="59dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparentWhite"
            android:numStars="5"
            android:stepSize="0.5" />

        <EditText
            android:id="@+id/commentEditText"
            android:layout_width="380dp"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/textview_border"
            android:fontFamily="cursive"
            android:gravity="center"

            android:hint="@string/your_comment"
            android:inputType="textMultiLine"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/submitReviewButton"
            android:layout_width="210dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/brown"
            android:fontFamily="cursive"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/submit_review"
            android:textColor="@color/black"

            android:textSize="20sp"
            android:textStyle="bold" />


</LinearLayout>
</ScrollView>
