<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg2"
    tools:context=".SignIn">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@color/orangeLighter"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/title2"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"


                android:background="@color/white"
                android:drawableLeft="@drawable/email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="@color/orangeLighter"
                android:textColorHint="@color/orangeLight"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPassword"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColor="@color/orangeLighter"
                android:textColorHint="@color/orangeLight"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSignUpRedirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:backgroundTint="@color/white"
                android:fontFamily="casual"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/dont_have_account"
                android:textAllCaps="false"
                android:textColor="@color/orangeLight"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="318dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"

                android:backgroundTint="@color/white"
                android:fontFamily="casual"
                android:text="@string/btn2"
                android:textColor="@color/orangeLight"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>